--- a/apps/ETMI_Gui/ui_etmi.ui
+++ b/apps/ETMI_Gui/ui_etmi.ui
@@ -100,9 +100,7 @@ color: rgb(255, 255, 255);</string>
      </size>
     </property>
     <property name="styleSheet">
-     <string notr="true">QFrame {
- background-color :rgb(85, 85, 255);
-}</string>
+     <string notr="true"/>
     </property>
     <property name="locale">
      <locale language="English" country="UnitedStates"/>
