--- a/apps/ETMI_Gui/ui_etmi.ui
+++ b/apps/ETMI_Gui/ui_etmi.ui
@@ -14,11 +14,11 @@
    <string>ETMI Pilotage</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="btnQuit">
+   <widget class="QPushButton" name="btn_quit">
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>520</y>
+      <y>510</y>
       <width>75</width>
       <height>24</height>
      </rect>
@@ -27,11 +27,11 @@
      <string>Quitter</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnRun">
+   <widget class="QPushButton" name="btn_run">
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>480</y>
+      <y>470</y>
       <width>75</width>
       <height>24</height>
      </rect>
@@ -43,7 +43,7 @@
      <string>Lancer</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnManual">
+   <widget class="QPushButton" name="btn_manual">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -61,7 +61,7 @@ border:0;
      <string>Manuel</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnAuto">
+   <widget class="QPushButton" name="btn_auto">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -81,7 +81,7 @@ color: rgb(255, 255, 255);</string>
    <widget class="QFrame" name="led_joy_status">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>300</x>
       <y>170</y>
       <width>16</width>
       <height>16</height>
@@ -100,7 +100,9 @@ color: rgb(255, 255, 255);</string>
      </size>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">background-color: rgb(85, 255, 0);
+border-radius: 8px;
+</string>
     </property>
     <property name="locale">
      <locale language="English" country="UnitedStates"/>
@@ -112,7 +114,7 @@ color: rgb(255, 255, 255);</string>
      <enum>QFrame::Raised</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnAuto_2">
+   <widget class="QPushButton" name="btn_parameters">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -129,7 +131,7 @@ color: rgb(255, 255, 255);</string>
      <string>Paramètres</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnAuto_3">
+   <widget class="QPushButton" name="btn_logs">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -157,6 +159,128 @@ color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Voyant</string>
+    </property>
+   </widget>
+   <widget class="QFrame" name="led_joy_trig_status">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>200</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>14</width>
+      <height>14</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>16</width>
+      <height>16</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(85, 255, 0);
+border-radius: 8px;
+</string>
+    </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_led_status">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>170</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Joystick</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_led_trig_status">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>200</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Gachette</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_x">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>230</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Coord. X</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_y">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>250</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Coord. Y</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="display_x">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>230</y>
+      <width>49</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="display_y">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>250</y>
+      <width>49</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+</string>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
@@ -239,7 +363,7 @@ color: rgb(255, 255, 255);</string>
    </hints>
   </connection>
   <connection>
-   <sender>btnQuit</sender>
+   <sender>btn_quit</sender>
    <signal>clicked()</signal>
    <receiver>MainWindow</receiver>
    <slot>close()</slot>
@@ -255,23 +379,41 @@ color: rgb(255, 255, 255);</string>
    </hints>
   </connection>
   <connection>
-   <sender>btn_led</sender>
+   <sender>btn_manual</sender>
    <signal>clicked()</signal>
-   <receiver>led_joy_status</receiver>
-   <slot>update()</slot>
+   <receiver>MainWindow</receiver>
+   <slot>manual()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>147</x>
-     <y>385</y>
+     <x>62</x>
+     <y>140</y>
     </hint>
     <hint type="destinationlabel">
-     <x>335</x>
-     <y>209</y>
+     <x>207</x>
+     <y>82</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_auto</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>auto()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>91</x>
+     <y>177</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>252</x>
+     <y>152</y>
     </hint>
    </hints>
   </connection>
  </connections>
  <slots>
   <slot>quit()</slot>
+  <slot>manual()</slot>
+  <slot>auto()</slot>
  </slots>
 </ui>
