--- a/apps/ETMI_Gui/ui_etmi.ui
+++ b/apps/ETMI_Gui/ui_etmi.ui
@@ -10,8 +10,23 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>16777215</height>
+   </size>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>1</width>
+    <height>5</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>ETMI Pilotage</string>
+  </property>
+  <property name="windowOpacity">
+   <double>5.000000000000000</double>
   </property>
   <property name="toolTipDuration">
    <number>5</number>
@@ -767,11 +782,284 @@ border-radius: 7px;
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btn_right_1</sender>
+   <signal>pressed()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>411</x>
+     <y>242</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>24</x>
+     <y>411</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_right_1</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>426</x>
+     <y>245</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>22</x>
+     <y>437</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_left_1</sender>
+   <signal>pressed()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>366</x>
+     <y>244</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>21</x>
+     <y>470</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_left_1</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>355</x>
+     <y>250</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>32</x>
+     <y>481</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_right_2</sender>
+   <signal>pressed()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>410</x>
+     <y>279</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>16</x>
+     <y>390</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_right_2</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>423</x>
+     <y>280</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>18</x>
+     <y>374</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_left_2</sender>
+   <signal>pressed()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>368</x>
+     <y>288</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>13</x>
+     <y>350</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_left_2</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>354</x>
+     <y>280</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>29</x>
+     <y>343</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_left_3</sender>
+   <signal>pressed()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>366</x>
+     <y>323</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>7</x>
+     <y>321</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_left_3</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>354</x>
+     <y>309</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>26</x>
+     <y>311</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_right_3</sender>
+   <signal>pressed()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>415</x>
+     <y>328</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>35</x>
+     <y>301</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_right_3</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>400</x>
+     <y>333</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>56</x>
+     <y>331</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_left_4</sender>
+   <signal>pressed()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>366</x>
+     <y>365</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>39</x>
+     <y>427</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_left_4</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>375</x>
+     <y>365</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>56</x>
+     <y>459</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_right_4</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>416</x>
+     <y>371</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>42</x>
+     <y>406</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_right_4</sender>
+   <signal>pressed()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>400</x>
+     <y>362</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>37</x>
+     <y>384</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_right_4</sender>
+   <signal>released()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>action_drives()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>429</x>
+     <y>363</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>39</x>
+     <y>370</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>quit()</slot>
   <slot>manual()</slot>
   <slot>auto()</slot>
   <slot>checked_drives()</slot>
+  <slot>action_drives()</slot>
  </slots>
 </ui>
